# HorribleLLM

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  pyproject.toml  setup.py
.github/workflows/: cmake.yml
benchmarks/: CMakeLists.txt  bench_tensor.cc
docs/: conf.py  index.md  instantiation.html
horriblellm/: __init__.py  core.py  model.py
horriblellm/examples/: train_basic.py  train_basic_autograd.py
include/horriblellm/: Tensor.hpp  horriblellm.hpp
src/: CMakeLists.txt  main.cc
src/bindings/: pybind.cc
src/core/: Tensor.cc  Tensor_impl.hpp
tests/: CMakeLists.txt  test_tensor.cc
